lets see if it works

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,9 +20,29 @@ jobs:
         with:
           python-version: 3.9
     
+  setup_aws:
+    runs-on: ubuntu-latest
+    outputs:
+      ecr_password: ${{ steps.connect_aws.outputs.ecr_password }}
+    steps:
+      - name: Connect to AWS
+        uses: ./.github/actions/aws-connect
+        id: connect_aws
+        with:
+          access-key: ${{ secrets.ACCESS_KEY }}
+          secret-key: ${{ secrets.SECRET_KEY }}
+          aws-service: ECR
+          aws-region: ${{ env.AWSZONE }}
+          aws-account: ${{ env.ACCOUNTID }}
+
   test:
     needs: lint
     runs-on: ubuntu-latest
+    container:
+      image: 952256534162.dkr.ecr.us-east-1.amazonaws.com/cicd:2023.08.24-oliver-e6a30eb
+      credentials:
+        username: AWS
+        password: ${{ needs.setup_aws.outputs.ecr_password }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -31,16 +51,3 @@ jobs:
           python-version: 3.9
       - name: Run pytest
         run: pytest
-
-  run_in_container:
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/xaxis-code/cicd:v1 # ${{ env.REGISTRY }}/${{ env.CICD_IMAGE }}
-      credentials:
-         username: ${{ github.actor }}
-         password: ${{ secrets.GITHUB_TOKEN }}
-      volumes:
-        - my_docker_volume:/volume_mount
-    steps:
-      - name: test
-        run: ls
