--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -25,6 +25,8 @@ jobs:
     outputs:
       ecr_password: ${{ steps.connect_aws.outputs.ecr_password }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Connect to AWS
         uses: ./.github/actions/aws-connect
         id: connect_aws
