--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -51,7 +51,7 @@ jobs:
       image: 952256534162.dkr.ecr.us-east-1.amazonaws.com/cicd:2023.08.24-oliver-e6a30eb
       credentials:
         username: AWS
-        password: ${{ jobs.setup_aws.outputs.ecr_password }}
+        password: ${{ needs.setup_aws.outputs.ecr_password }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
