is needs not enough?

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -40,12 +40,11 @@ jobs:
           aws-service: ECR
           aws-region: ${{ env.AWSZONE }}
           aws-account: ${{ env.ACCOUNTID }}
-      - name: print outputs
-        shell: bash
-        run: echo "${{ steps.connect_aws.outputs.ecr_password }}"
 
   test:
-    needs: lint
+    needs: 
+      - lint
+      - setup_aws
     runs-on: ubuntu-latest
     container:
       image: 952256534162.dkr.ecr.us-east-1.amazonaws.com/cicd:2023.08.24-oliver-e6a30eb
