--- a/.github/actions/aws-connect/action.yml
+++ b/.github/actions/aws-connect/action.yml
@@ -32,8 +32,10 @@ runs:
     - name: Configure AWS CLI
       shell: bash
       run: |
-        aws configure set aws_access_key_id ${{ inputs.access-key }}
-        aws configure set aws_secret_access_key ${{ inputs.secret-key }}
+        # aws configure set aws_access_key_id ${{ inputs.access-key }}
+        # aws configure set aws_secret_access_key ${{ inputs.secret-key }}
+        aws configure set aws_access_key_id ${{ secrets.ACCESS_KEY }}
+        aws configure set aws_secret_access_key ${{ secrets.SECRET_KEY }}
         aws configure set region ${{ inputs.aws-region }}
     - name: Test AWS connectivity
       shell: bash
