--- a/.github/workflows/create-cicd-container-image.yml
+++ b/.github/workflows/create-cicd-container-image.yml
@@ -2,8 +2,9 @@
 name: Create and publish a Docker image
 
 on:
-  push:
-    branches: ['main']
+  workflow_call:
+  # push:
+  #   branches: ['main']
 
 env:
   DOCKER_REGISTRY: ghcr.io
