Adding flag to avoid tests output on non-pr build

--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -19,6 +19,8 @@ jobs:
   pr:
     uses: ./.github/workflows/pr.yml
     secrets: inherit
+    with:
+      from-merge: true
 
   build:
     needs: pr
