--- a/.github/workflows/jenkinsjob.yml
+++ b/.github/workflows/jenkinsjob.yml
@@ -9,4 +9,4 @@ jobs:
       uses: actions/checkout@v3
     - name: Run Jenkinsfile
       run: |
-        docker run --rm -v  -e ACCESS_KEY "$ak" -e SECRET_KEY "sk" $(pwd)/Jenkinsfile:/workspace/Jenkinsfile jenkins/jenkinsfile-runner
+        docker run --rm -v  -e ACCESS_KEY "k" -e SECRET_KEY "sk" $(pwd)/Jenkinsfile:/workspace/Jenkinsfile jenkins/jenkinsfile-runner
