--- a/.github/workflows/jenkinsjob.yml
+++ b/.github/workflows/jenkinsjob.yml
@@ -9,4 +9,5 @@ jobs:
       uses: actions/checkout@v3
     - name: Run Jenkinsfile
       run: |
-        docker run --rm -e ACCESS_KEY "${{ secrets.ACCESS_KEY }}" -e SECRET_KEY "${{ secrets.SECRET_KEY }}" -v $(pwd)/Jenkinsfile:/workspace/Jenkinsfile jenkins/jenkinsfile-runner
+        # -e ACCESS_KEY "${{ secrets.ACCESS_KEY }}" -e SECRET_KEY "${{ secrets.SECRET_KEY }}"
+        docker run --rm  -v $(pwd)/Jenkinsfile:/workspace/Jenkinsfile jenkins/jenkinsfile-runner
