--- a/.github/workflows/jenkinsjob.yml
+++ b/.github/workflows/jenkinsjob.yml
@@ -1,13 +1,17 @@
 name: Run Jenkinsfile
 on: [push]
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: jenkins/jenkinsfile-runner
+      env:
+        ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@3
     - name: Run Jenkinsfile
       run: |
-        # -e ACCESS_KEY "${{ secrets.ACCESS_KEY }}" -e SECRET_KEY "${{ secrets.SECRET_KEY }}"
-        docker run --rm  -v $(pwd)/Jenkinsfile:/workspace/Jenkinsfile jenkins/jenkinsfile-runner
+        cp Jenkinsfile /workspace/Jenkinsfile
+        /app/bin/jenkinsfile-runner
