--- a/.github/workflows/jenkinsjob.yml
+++ b/.github/workflows/jenkinsjob.yml
@@ -10,7 +10,7 @@ jobs:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
     steps:
     - name: Checkout code
-      uses: actions/checkout@3
+      uses: actions/checkout@v3
     - name: Run Jenkinsfile
       run: |
         cp Jenkinsfile /workspace/Jenkinsfile
