--- a/.github/workflows/jenkinsjob.yml
+++ b/.github/workflows/jenkinsjob.yml
@@ -13,5 +13,5 @@ jobs:
       uses: actions/checkout@v3
     - name: Run Jenkinsfile
       run: |
-        cp Jenkinsfile /workspace/Jenkinsfile
+        # cp Jenkinsfile /workspace/Jenkinsfile
         /app/bin/jenkinsfile-runner
